--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "pm2": "^5.4.2"
