--- a/.github/workflow/node.yml
+++ b/.github/workflow/node.yml
@@ -1,4 +1,4 @@
-name: NASA Project CI
+name: NASA API CI
 on:
   push:
     branches: [main]
@@ -6,12 +6,12 @@ on:
     branches: [main]
 jobs:
   build:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js version 20
-      uses: actions/setup-node@v3
-      with:
-        node-version: "20"
-    - run: npm install
-    - run: npm run build --prefix client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.Js v18.7.0
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
+      - run: npm install
+      - run: npm run build --prefix client
