entire app fix and mango db connect

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGO_URL = mongodb+srv://Lukho:OmQfpA3iUEX1LzEd@nodefirst.nzhuexo.mongodb.net/NasaDataBaseProject?retryWrites=true&w=majority&appName=nodefirst
+MONGO_URL = mongodb+srv://AluluthoSpambo:AluluthoSpambo@nodefirst.nzhuexo.mongodb.net/DbNasas?retryWrites=true&w=majority&appName=nodefirst
