--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use node 16
+      - name: Use node 16 work
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 20
       - run: npm install
       - run: npm run build --prefix client
