--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,17 +1,17 @@
 name: NASA Project CI
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   pull_request:
-    branches: ["main"]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js version ${{ matrix.node-version }}
+      - name: Use Node.js version 20
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
       - run: npm install
       - run: npm run build --prefix client
